--- a/contact/index.html
+++ b/contact/index.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name='robots' content='max-image-preview:large' />
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
-	<title>Contact &#8211; UX221 Midterm Practice</title>
+	<title>Contact &#8211; HBD</title>
 <link rel='dns-prefetch' href='//localhost' />
-<link rel="alternate" type="application/rss+xml" title="UX221 Midterm Practice &raquo; Feed" href="/UX221MidtermPractice/feed/" />
-<link rel="alternate" type="application/rss+xml" title="UX221 Midterm Practice &raquo; Comments Feed" href="/UX221MidtermPractice/comments/feed/" />
+<link rel="alternate" type="application/rss+xml" title="HBD &raquo; Feed" href="/UX221MidtermPractice/feed/" />
+<link rel="alternate" type="application/rss+xml" title="HBD &raquo; Comments Feed" href="/UX221MidtermPractice/comments/feed/" />
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"/UX221MidtermPractice/wp-includes\/js\/wp-emoji-release.min.js?ver=6.7.1"}};
 /*! This file is auto-generated */
@@ -145,7 +145,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	<div class="wp-block-group has-global-padding is-layout-constrained wp-block-group-is-layout-constrained">
 		
 		<div class="wp-block-group alignwide is-content-justification-space-between is-nowrap is-layout-flex wp-container-core-group-is-layout-2 wp-block-group-is-layout-flex" style="padding-top:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30)">
-			<p class="wp-block-site-title"><a href="/UX221MidtermPractice/" target="_self" rel="home">UX221 Midterm Practice</a></p>
+			<p class="wp-block-site-title"><a href="/UX221MidtermPractice/" target="_self" rel="home">HBD</a></p>
 			
 			<div class="wp-block-group is-content-justification-right is-nowrap is-layout-flex wp-container-core-group-is-layout-1 wp-block-group-is-layout-flex">
 				<nav class="is-responsive items-justified-right wp-block-navigation is-content-justification-right is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="" 
@@ -226,7 +226,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 			
 			<div class="wp-block-columns is-layout-flex wp-container-core-columns-is-layout-1 wp-block-columns-is-layout-flex">
 				
-				<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow" style="flex-basis:100%"><h2 class="wp-block-site-title"><a href="/UX221MidtermPractice/" target="_self" rel="home">UX221 Midterm Practice</a></h2>
+				<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow" style="flex-basis:100%"><h2 class="wp-block-site-title"><a href="/UX221MidtermPractice/" target="_self" rel="home">HBD</a></h2>
 
 				<p class="wp-block-site-tagline">Happy Birthday to You!</p>
 				</div>
